--- a/01Project/WebContent/CSS/Style.css
+++ b/01Project/WebContent/CSS/Style.css
@@ -28,7 +28,7 @@ img {
 }
 
 
-/* HEADER
+/* HEADER (상단 배너)
 ------------------------------- */
 
 header {
@@ -138,7 +138,7 @@ nav {
 }
 
 
-/* FOOTER
+/* FOOTER (하단 배너)
 ------------------------------- */
 
 footer {
