--- a/01Project/WebContent/CSS/Style.css
+++ b/01Project/WebContent/CSS/Style.css
@@ -28,7 +28,7 @@ img {
 }
 
 
-/* HEADER (상단 배너)
+/* HEADER
 ------------------------------- */
 
 header {
@@ -61,7 +61,7 @@ nav {
 	margin: 100px auto;
 }
 
-.main-contents > button {
+.main-contents button {
 	background: rgba(171, 219, 252, 0.2);
 }
 
@@ -137,55 +137,8 @@ nav {
 	border-radius: 20%;
 }
 
-.tagScroll {
-	width: 180px;
-	height: 800px;
-	overflow: scroll;
-}
 
-.bestBoard {
-	display: flex;
-	justify-content: space-between;
-}
-
-.bestBoard p{
-	background-color: #34314c;
-	color: white;
-	width: 200px;
-	text-align: center;
-	font-size: 1.5rem;
-}
-
-.news p {
-	background-color: #34314c;
-	color: white;
-	text-align: center;
-	font-size: 1.5rem;
-}
-
-.bestBoard p:first-child {
-	margin-left: 150px;
-}
-
-.bestBoard p:last-child {
-	margin-right: 150px;
-}
-
-.btn {
-	border-radius: 20%;
-	width: 60px;
-	height: 40px;
-	margin-right: 5px;
-	background-color: #47b8e0;
-	color: white;
-}
-
-.icon {
-	width: 30px;
-}
-
-
-/* FOOTER (하단 배너)
+/* FOOTER
 ------------------------------- */
 
 footer {
