--- a/pgTEMP/AcornProject_PG/WebContent/CSS/UpdateBoard.css
+++ b/pgTEMP/AcornProject_PG/WebContent/CSS/UpdateBoard.css
@@ -67,7 +67,7 @@ hr {
 	background-color: black;
 	height: 2px;
 }
-#category {
+#boardCategory {
 	font-size:17px;
 	width: 200px;
 	margin-top: 30px;
@@ -78,7 +78,7 @@ hr {
 	text-align: center;
 }
 
-#title {
+#boardName {
 	font-size:17px;
 	margin-top:30px;
 	width: 845px;
@@ -88,7 +88,7 @@ hr {
 	text-indent: 15px;
 }
 
-#content {
+#boardContent {
 	width: 1075px;
 	height:500px;
 	margin-top: 30px;
@@ -99,7 +99,7 @@ hr {
 	text-indent: 15px;
 }
 
-#update, #delete {
+#boardupdate, #boarddelete {
 	width: 120px;
 	height:40px;
 	margin-top: 20px;
@@ -112,7 +112,7 @@ hr {
 	color: white;
 }
 
-#delete {
+#boarddelete {
 	margin-right:20px;
 }
 /* FOOTER
