--- a/pgTEMP/AcornProject_PG/WebContent/CSS/Main.css
+++ b/pgTEMP/AcornProject_PG/WebContent/CSS/Main.css
@@ -61,7 +61,7 @@ nav {
 	margin: 100px auto;
 }
 
-.main-contents > button {
+.gamesBtn {
 	background: rgba(171, 219, 252, 0.2);
 }
 
@@ -109,11 +109,11 @@ nav {
 	margin-bottom: 10px;
 }
 
-.main-contents button {
+button {
 	padding: 5px;
 }
 
-.main-contents button:hover {
+.gamesBtn:hover {
 	background-color: rgba(171, 219, 252, 0.5);
 }
 
@@ -171,7 +171,7 @@ nav {
 	margin-right: 150px;
 }
 
-.btn {
+.boardBtn {
 	border-radius: 20%;
 	width: 60px;
 	height: 40px;
