--- a/pgTEMP/AcornProject_PG/WebContent/CSS/DetailPage.css
+++ b/pgTEMP/AcornProject_PG/WebContent/CSS/DetailPage.css
@@ -26,6 +26,18 @@ img {
     padding: 0 4%;
 }
 
+#update, #delete {
+    width:50px;
+    height:30px;
+    background:#FFA500    ;
+    color:#fff;
+    text-align: center;
+    text-decoration: none;
+    margin: 10px;
+    font-weight: 800;
+    border-radius: 5px;
+    border:none;
+}
 
 /* HEADER
 ------------------------------- */
