--- a/pgTEMP/AcornProject_PG/WebContent/CSS/Login.css
+++ b/pgTEMP/AcornProject_PG/WebContent/CSS/Login.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Orelega+One&family=Work+Sans:ital,wght@0,300;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Orelega+One&family=Work+Sans:ital,wght@0,300;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Orelega+One&family=Righteous&family=Work+Sans:ital,wght@0,300;1,300&display=swap');
