Member(회원부분) 모두 다 해결했습니다!

--- a/PlayGround_1/AcornProject_PG/WebContent/CSS/MemberUpdate.css
+++ b/PlayGround_1/AcornProject_PG/WebContent/CSS/MemberUpdate.css
@@ -139,6 +139,10 @@ button {
 	font-family: Electrolize;
 	font-weight: 800;
 }
+
+#genre{
+	padding:10px;
+}
 /* FOOTER
 ------------------------------- */
 
