--- a/PlayGround_1/AcornProject_PG/WebContent/CSS/MemberUpdate.css
+++ b/PlayGround_1/AcornProject_PG/WebContent/CSS/MemberUpdate.css
@@ -79,7 +79,7 @@ h2{
 .side{
 	width: 200px;
 	height: 400px;
-	margin: 30px;
+	margin-right: 30px;
 	border-right:2px solid black;
 	float:left;
 }
