게시판 리스트쪽 틀 구성

--- a/PlayGround_1/AcornProject_PG/WebContent/CSS/BoardList.css
+++ b/PlayGround_1/AcornProject_PG/WebContent/CSS/BoardList.css
@@ -54,12 +54,16 @@ nav {
     margin-left: 36px;
 }
 
-/* MAIN
+/* BoardList
 ------------------------------- */
 
 .contents {
 	margin-top: 100px;
 	margin-bottom: 150px;
+}
+
+img {
+	width: 20px;
 }
 
 
