--- a/PlayGround_1/AcornProject_PG/WebContent/CSS/BoardPage.css
+++ b/PlayGround_1/AcornProject_PG/WebContent/CSS/BoardPage.css
@@ -59,25 +59,29 @@ nav {
 	margin: 100px auto;
 }
 
-.main-contents .container {
+.main-contents .container .review-contents {
 	display: block;
 	justify-content: space-between;
 }
 
-#boardName {
+#boardName, #boardReview {
 	display:inline;
 }
 
-#mbrId, #boardDate {
+#mbrName {
 	margin-left: 20px;
 	float: right;
 	font-size: 20px;
 }
-
+#boardDate {
+	margin-left: 20px;
+	float: right;
+	font-size: 18px;
+}
 hr {
 	background-color: black;
 	height: 2px;
-	margin-top:20px;
+	margin-top:7px;
 }
 .img {
 	float: right;
@@ -86,30 +90,34 @@ hr {
 	height:15px;
 	width:15px;
 }
-#boardCount {
+#boardCount, #boardLiked, #replyCount{
 	padding-left:10px;
 	font-size:18px;
 	float:right;
 }
 
-#boardContent {
-	width: auto;
-	height:auto;
+.content {
+	width:80%;
 	margin:50px 60px;
 	padding: 15px 20px;
 	border:none;
 	text-align: justify;
-	line-height: 2;
+}
+#boardContent {
+	line-height: 30px;
 }
 
 .button_good {
 	position: relative;
 	float:right;
-	margin-right: 20px;
+	margin-right: 100px;
 }
+
+
 /* ´ñ±Û */
 .midTable, .reviewTable {
 	text-align: center;
+	margin-bottom:20px;
 }
 
 .mbrName{
@@ -152,9 +160,9 @@ meter{
 }
 #newmeterval {
 	margin:0 px 20px;
-	
 	font-size: 20px;
 }
+
 #update, #delete {
 	width:50px;
 	height:30px;
@@ -181,6 +189,7 @@ button {
 	font-family: Electrolize;
 	font-weight: 800;
 }
+
 /* FOOTER
 ------------------------------- */
 
