--- a/PlayGround_1/AcornProject_PG/WebContent/CSS/BoardPage.css
+++ b/PlayGround_1/AcornProject_PG/WebContent/CSS/BoardPage.css
@@ -107,20 +107,48 @@ hr {
 	line-height: 30px;
 }
 
-.button_good {
-	position: relative;
-	float:right;
-	margin-right: 100px;
+div.button_good{
+	margin:auto;
+	width:10%;
 }
 
+#likedbtn{
+	background: url("../Image/liked.png") no-repeat;
+	width:100px;
+	height:100px;
+	cursor:pointer;
+	border:none;
+	margin: 20px;
+}
+
+.boardbtn {
+	float: right;
+	margin-left:10px;
+	margin-top:30px;
+	margin: 10px;
+	width: 60px;
+	height:30px;
+	background:#FFA500	;
+	color:#fff;
+	text-align: center;
+	text-decoration: none;
+	cursor:pointer;
+	border:none;
+	border-radius: 5px;
+	font-family: Electrolize;
+	font-weight: 800;
+}
 
 /* ´ñ±Û */
-.midTable, .reviewTable {
+.midTable {
 	text-align: center;
 	margin-bottom:20px;
 }
-
-.mbrName{
+.reviewTable{
+	text-align: center;
+	margin:40px 0px;
+}
+.replymbrName{
 	width: 180px;
 	padding: 5px;
 	text-align: center;
@@ -158,7 +186,7 @@ meter{
 #newmeter{
 	margin:10px;
 }
-#newmeterval {
+#reviewScore {
 	margin:0 px 20px;
 	font-size: 20px;
 }
@@ -175,7 +203,7 @@ meter{
 	border-radius: 5px;
 	border:none;
 }
-button {
+.btn {
 	margin: 10px;
 	width: 90px;
 	height:30px;
