--- a/PlayGround_1/AcornProject_PG/WebContent/CSS/BoardList.css
+++ b/PlayGround_1/AcornProject_PG/WebContent/CSS/BoardList.css
@@ -28,55 +28,69 @@ img {
 }
 
 
-/* HEADER (상단 배너)
-------------------------------- */
-
-header {
-	background: rgb(171, 219, 252);
-}
-
-.logo {
-    width: 210px;
-    margin-top: 14px;
-}
-
-nav {
-	display: flex;
-	justify-content: space-between;
-}
-
-.nav {
-    display: flex;
-    list-style: none;
-}
-
-.nav li {
-    margin-left: 36px;
-}
-
 /* BoardList
 ------------------------------- */
 
 .contents {
-	margin-top: 100px;
-	margin-bottom: 150px;
+	margin: 150px auto;
 }
 
-img {
-	width: 20px;
+h1 {
+	margin-bottom: 50px;
 }
 
-
-/* FOOTER (하단 배너)
-------------------------------- */
-
-footer {
-    background: rgb(171, 219, 252);
-    text-align: center;
-    padding: 26px 0;
+table {
+	border-collapse: collapse;
+	width: 100%;
+	margin-top: 20px;
+	margin-bottom: 50px;
 }
 
-footer p {
-    font-size: 0.875rem;
+th {
+	background-color: #34314c;
+	color: white;
+	text-align: center;
 }
 
+td {
+	text-align: center;
+	line-height: 2.5;
+}
+
+#paging {
+	margin-top: 30px;
+	text-align: center;
+}
+
+#paging a {
+	display: inline-block;
+	width: 30px;
+	border-radius: 10%;
+	font-size: 1.2rem;
+}
+
+.searchBox {
+	display: flex;
+}
+
+img{
+	width: 25px;
+}
+
+#boardCategory {
+	height: 30px;
+}
+
+#write {
+	float: right;
+	background-color: #34314c;
+	color: white;
+	width: 80px;
+	height: 30px;
+	border-radius: 10%;
+	border: none;
+}
+
+.line {
+	border-bottom: 1px solid #34314c;
+}
