회원탈퇴페이지 수정

--- a/PlayGround_1/AcornProject_PG/WebContent/CSS/DetailPage.css
+++ b/PlayGround_1/AcornProject_PG/WebContent/CSS/DetailPage.css
@@ -147,6 +147,10 @@ meter{
 #newmeter{
 	margin:20px;
 }
+#reviewScore {
+	margin:0 px 20px;
+	font-size: 20px;
+}
 button {
 	margin-bottom: 20px;
 	width: 90px;
